# cc-time-tracker

./: .gitignore  AGENTS.md  CC Time Tracker.command  CLAUDE.md  LICENSE  README.md  cc-time-end.py  cc-time-menubar.py  cc-time-report.py  cc-time-start.py  hooks-config.json  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-03-23-menubar-app.md  2026-03-23-menubar-beautify.md  2026-03-23-pypi-packaging.md  2026-03-24-cumulative-tracking-and-export.md
docs/superpowers/specs/: 2026-03-23-menubar-app-design.md  2026-03-23-menubar-beautify-design.md  2026-03-23-pypi-packaging-design.md  2026-03-24-cumulative-tracking-and-export-design.md
src/cc_time_tracker/: __init__.py  common.py  end_hook.py  report.py  setup_cmd.py  start_hook.py  sync.py  sync_install.py  uninstall_cmd.py
tests/: test_common.py  test_end_hook.py  test_menubar.py  test_report.py  test_setup_cmd.py  test_start_hook.py  test_sync.py  test_uninstall_cmd.py
