[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-time-tracker"
dynamic = ["version"]
description = "Automatic time tracking for Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "thatUkrainianGuy" }]
keywords = ["claude-code", "time-tracking", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
cc-time-report = "cc_time_tracker.report:main"
cc-time-setup = "cc_time_tracker.setup_cmd:main"
cc-time-uninstall = "cc_time_tracker.uninstall_cmd:main"

[project.optional-dependencies]
lock = ["filelock"]

[project.urls]
Homepage = "https://github.com/riabchuk/cc-time-tracker"
Issues = "https://github.com/riabchuk/cc-time-tracker/issues"

[tool.hatch.version]
path = "src/cc_time_tracker/__init__.py"
